--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.3.0/snap.svg-min.js"></script>
-  <script type="text/javascript" src="svg-dial.min.js"></script>
+  <script type="text/javascript" src="svg-dial.js"></script>
   <script type="text/javascript">
     // // globals
     var dial = new SVGDial('#svg-dial', {
