--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               Of all servers visible from matrix.org, this is the percentage which have correct valid TLS certificates.
             </p>
             <p class="my-4">
-              Synapse 1.0 will support only the r0 release of the <a href="https://matrix.org/docs/spec/server_server/r0.1.1.html">Server to Server spec</a> as used in the upcoming Matrix 1.0 standard. As a result it will not federate with Homeservers using self-signed certificates. It is essential that all homeserver admins configure their certificate prior to the release! For more information and a guide to configuring your certificates, take a look at our <a href="https://github.com/matrix-org/synapse/blob/master/docs/MSC1711_certificates_FAQ.md">handy guide</a>.
+              Synapse 1.0 will support only the r0 release of the <a target="_blank" href="https://matrix.org/docs/spec/server_server/r0.1.1.html">Server to Server spec</a> as used in the upcoming Matrix 1.0 standard. As a result it will not federate with Homeservers using self-signed certificates. It is essential that all homeserver admins configure their certificate prior to the release! For more information and a guide to configuring your certificates, take a look at our <a target="_blank" href="https://github.com/matrix-org/synapse/blob/master/docs/MSC1711_certificates_FAQ.md">handy guide</a>.
             </p>
             <div class="input-group input-group-lg">
               <input class="input-group-text w-75" type="text" id="txtHostname" />
