add twitter image and update typeface

--- a/index-template.html
+++ b/index-template.html
@@ -16,6 +16,11 @@
     body {
       color: rgb(102, 102, 102);
     }
+    @import url('https://rsms.me/inter/inter.css');
+    html { font-family: 'Inter', sans-serif; }
+    @supports (font-variation-settings: normal) {
+      html { font-family: 'Inter var', sans-serif; }
+    }
   </style>
 
 
@@ -35,6 +40,13 @@
 </script>
 <!-- End Matomo Code -->
 
+<!-- twitter -->
+<meta name="twitter:card" value="summary_large_image" />
+<meta name="twitter:url" value="https://www.arewereadyyet.com/" />
+<meta name="twitter:title" value="Matrix 1.0-ready Federation" />
+<meta name="twitter:description" value="" />
+<meta name="twitter:image" value="https://www.arewereadyyet.com/dial-image.png" />
+<meta name="twitter:site" value="@matrixdotorg" />
 
 </head>
 
