--- a/index-template.html
+++ b/index-template.html
@@ -12,6 +12,8 @@
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chivo" rel="stylesheet">
+  
   <style>
     body {
       color: rgb(102, 102, 102);
